# rs-chinese-chess

./: Cargo.toml  readme.md
lib/engine/: Cargo.toml
lib/engine/src/: board.rs  engine.rs  lib.rs  zobrist.rs
lib/ui/: Cargo.toml
lib/ui/src/: main.rs
src/: main.rs  ui.rs
