[package]
edition = "2021"
name = "ui"
version = "0.1.0"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
fltk = {version = "1.4.15", features = ["fltk-bundled"]}
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
engine = { path = "../engine" }


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

#- `opt-level = "z"`：将优化级别设置为最小化，这将减小生成的二进制文件的大小。
#- `lto = true`：启用链接时优化（Link Time Optimization）以进一步减小生成的二进制文件的大小。
#- `codegen-units = 1`：将代码生成单元设置为1，这将减少生成的目标文件的数量，从而减小最终生成的二进制文件的大小。
#- `panic = "abort"`：将 panic 的处理方式设置为终止程序，这将减小运行时库的大小。
